5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4164/executions/1575_1330.log
== TEST (2019-03-12 11:45:44) 
-- CODE:
print(round(250/6, nn))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250/6, nn))
NameError: name 'nn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:53) 
-- CODE:
print(round(250/6, n))
-- EXECUTION TIME:
0.209531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1330/main.py", line 1, in <module>
    print(round(250/6, n))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:06) 
-- CODE:
print(round(250/6, n)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:18) 
-- CODE:
print(round(250/6, 2)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:28) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:46:31) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.134727
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
